k8s/chirmera/00-chirmera-00-00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secflow-ns
  labels:
    name: secflow-ns
    environment: production
