k8s/chirmera/00-chirmera-02-01-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirmera-redis
  namespace: secflow-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chirmera-redis
  template:
    metadata:
      labels:
        name: chirmera-redis
    spec:
      containers:
        - name: chirmera-redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          args:
            - redis-server
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: chirmera-redis-data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: chirmera-redis-data
          persistentVolumeClaim:
            claimName: chirmera-redis-data-pvc
