k8s/chirmera/00-chirmera-01-03-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirmera-postgresql
  namespace: secflow-ns
spec:
  type: ClusterIP
  selector:
    name: chirmera-postgresql
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
