k8s/chirmera/00-chirmera-02-02-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirmera-redis
  namespace: secflow-ns
spec:
  type: ClusterIP
  selector:
    name: chirmera-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
