k8s/chirmera/00-chirmera-03-07-sechps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirmera-sechps
  namespace: secflow-ns
spec:
  type: ClusterIP
  selector:
    name: chirmera-sechps
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
