k8s/chirmera/00-chirmera-04-03-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chirmera-worker
  namespace: secflow-ns
spec:
  type: ClusterIP
  selector:
    name: chirmera-worker
  ports:
    - name: http
      port: 8090
      targetPort: 8090
      protocol: TCP
