k8s/chirmera/00-chirmera-05-00-ingress-for-release.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chirmera-ingress
  namespace: secflow-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Upgrade $http_upgrade;
      Connection "upgrade";
    nginx.ingress.kubernetes.io/websocket-services: "chirmera-sechps"
spec:
  ingressClassName: nginx
  rules:
    - host: chirmera.ai.icsl.huawei.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chirmera-sechps
                port:
                  number: 3000
